# apkParse-tauri

./: .gitignore  README.md  apk.ts  config.txt  package.json  parse.text  pnpm-lock.yaml  run.cmd  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/: TAURI_ADVANCED.md  TAURI_CORE_CONCEPTS.md  TAURI_RUST_BASICS.md  TAURI_TUTORIAL.md  aapt2_usage.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md  extract_aapt.ps1
src-tauri/src/: apk_parser.rs  commands.rs  lib.rs  main.rs
src-tauri/src/utils/: apk_parser.rs  error.rs  file_info.rs  icon.rs  manifest.rs  mod.rs  permission.rs  security.rs  signature.rs
src/assets/: reset.css
src/components/: Aapt2Helper.vue  AnalysisResult.vue  ApkUploader.vue  AppNav.vue  HelpContent.vue  SupportInfo.vue
src/router/: index.ts
src/stores/: apkStore.ts
src/types/: apk.ts
src/utils/: clipboard.ts  reportGenerator.ts  theme.ts
src/views/: HelpPage.vue  HistoryPage.vue  HomePage.vue  Settings.vue
