[package]
name = "tauri-apk-analyzer"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apk_parser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-dialog = { version = "2.2.1" }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
thiserror = "1.0"
xml = "0.8"
x509-parser = "0.15"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
base64 = "0.22"
tempfile = "3.8"
rand = "0.8"
chrono = "0.4"
android-manifest = "0.1.8"
quick-xml = "0.30"
md5 = "0.7"
regex = "1.10.2"
axmldecoder = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
encoding_rs = "0.8.32"
lazy_static = "1.4.0"
sysinfo = "0.30.5"
once_cell = "1.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

